compiler/tests/ui/fail/foo_auto.rs
#[compiler::item("foo_auto")]
trait Foo {}

fn main() {}
