compiler/tests/ui/fail/foo_auto.stderr
error: `foo_auto` item must be an auto trait
 --> tests/ui/fail/foo_auto.rs:2:1
  |
2 | trait Foo {}
  | ^^^^^^^^^^^^
